--- a/index.html
+++ b/index.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141278575-1"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics グーグルアナリティクスのページIDを取得してコピペ-->
+<script async src="https://　　　　　　"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', 'UA-141278575-1');
+  gtag('config', '　　　　');
 </script>
-  <!-- Start of Async Drift Code -->
-<!--<script>
-"use strict";
-!function() {
-  var t = window.driftt = window.drift = window.driftt || [];
-  if (!t.init) {
-    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
-    t.factory = function(e) {
-      return function() {
-        var n = Array.prototype.slice.call(arguments);
-        return n.unshift(e), t.push(n), t;
-      };
-    }, t.methods.forEach(function(e) {
-      t[e] = t.factory(e);
-    }), t.load = function(t) {
-      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-      var i = document.getElementsByTagName("script")[0];
-      i.parentNode.insertBefore(o, i);
-    };
-  }
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('mvnbuheaxzb7');
-</script>-->
-<!-- End of Async Drift Code -->
+ 
  <meta charset="utf-8">
  <!--レスポンシブのためのviewport-->
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>小学校授業でプログラミング|ビスケットを活用したB分類での授業実践紹介サイト</title>
-  <meta content="2020年から小学校でプログラミング教育が始まりました。ビジュアルプログラミング言語のビスケット（Viscuit)を教科に組み込んだ授業事例を紹介します。主に指導者向けです。" name="description">
-  <meta content="小学校,プログラミング,ビスケット" name = "keywords">
+<title>小学校授業でMinecraft（マインクラフト）|マインクラフトを活用した授業アイデア紹介サイト</title>
+  <meta content="小学校の授業でMinecraft（マインクラフト）を活用する授業事例を紹介します。主に指導者向けです。" name="description">
+  <meta content="小学校,Minecraft,マインクラフト,マイクラ" name = "keywords">
   <link rel="stylesheet" href="stylesheet.css">
  <!--レスポンシブデザインの記述-->
  <link rel="stylesheet" href="responsive.css">
@@ -50,37 +24,32 @@ drift.load('mvnbuheaxzb7');
 </head>
 <body>
   <header>
-  <div class="container">
-   <div class="header-left">
-    <a href="https://tkby.github.io/Learning-by-Viscuit.github.io/LbV.html" ><img class="logo" src="https://tkby.github.io/Learning-by-Viscuit.github.io/V-EXLIPS.jpg"></a>
-   </div>
- <!--メニューアイコン-->    
-   <span class="fa fa-bars menu-icon"></span>
-  <div class="header-right">
-     <a href ="https://customform.jp/form/input/39848/">V-EXLIPSカスタマーセンター</a>
-     <a href="https://www.viscuit.com" target="_blank">Viscuit(ビスケット）</a>
-     <a href="https://www.viscuit.com/doviscuit/" target="_blank">「学校でビスケット3」</a>
-   <!--グーグルフォーム-->
-      <!--    <a href="#">お問い合わせ</a>
-         <a href="#" class="login">ログイン</a>
-        </div>-->
- </div>
+     <div class="container">
+       <!--ヘッダーの左のアイコン　現在不要なのでコメントアウト
+          <div class="header-left">
+             <a href="https://tkby.github.io/. " ><img class="logo" src="https://tkby.github.io/. .jpg"></a>-->
+           </div>
+        <!--メニューアイコン　現在は不要なので、コメントアウト   
+            <span class="fa fa-bars menu-icon"></span>
+               <div class="header-right">
+                   <a href ="https://customform.jp/form/input/    /"></a>
+                   <a href="https://.          " target="_blank">    </a>
+                   <a href="https://.        /" target="_blank">.        </a>
+              </div>-->
+     </div>
  </header>
  <div class="top-wrapper">
     <div class ="container">
-      <h1>Viscuit（ビスケット）で</h1>
+      <h1>小学校の授業でMinecraftを活用する事例サイト</h1>
        <h1>遊びながら学ぶ!学びながら遊ぶ!</h1>
-     <h1>小学校プログラミング教育B分類</h1>
-      <h2>B分類:学習指導要領に例示されてはいないが,学習指導要領に示される各教科等を指導する中で実施</h2>
-      <h3>~ V-EXLIPS<a href="https://tkby.github.io/Learning-by-Viscuit.github.io/LbV.html">（エクリプスとは？）</a>~</h3>  
-      <h3>教科の学びをビスケットでプログラミングしながら深めます。</h3>
-      <p>2020年度より小学校にプログラミング教育が導入され、全国で実施されるようになりました。その内容はA,B,C,D,E,Fの6つに分類されています。このサイトは、小学校でのプログラミング教育を、ビジュアルプログラミング言語「ビスケット」で「B分類：学習指導要領に例示されてはいないが、学習指導要領内に示される各教科等を指導する中」で実施する事例集です。</p>
-      <h3>ビスケット活用のメリット「AEIOU」</h3>
-     <p>①「Artistic」→配色が無限にあり、ストレスフリーに色選択ができ、思い通りの色彩を手軽に表現できます。</p>  
-      <p>②「Easy」→シンプルなルールと操作性なので、児童にとって必要なトライアル＆エラーの時間を最大限に確保できます。</p>
-      <p>③「Inclusive」→覚える操作が少なく、文字や数値のキー入力を必要としません。誰もが使えるようになります。</p>      
-     <p>④「One & only」→コピー機能がありません。児童のオリジナリティが反映された「世界で1つの作品」が生まれます。</p>     
-     <p>⑤「Universal design」→操作ボタンのカラーがグレーで統一されていて分かりやすく、機能が絞り込まれています</p>
+   　　　 <h2>各教科で実際に実施済のアイデアを掲載</h2>
+ 　　　　　　<h3>ICT活用にマイクラに加えることで、児童の学びのバリエーションが増えます！</h3>
+       <h3>マインクラフト活用のメリット「AEIOU」</h3>
+     <p>①「Absorbing（夢中にさせる）」→２億本以上売れた「世界で最も売れたゲーム」（2021/6月時点）は教育でもその魅力を発揮します。</p>  
+      <p>②「Encouraging（元気付ける）」→マイクラは子どもの生き生きとした姿を引き出すお手伝いをしてくれます。</p>
+      <p>③「Interesting（興味関心を引き起こす）」→。</p>      
+     <p>④「o」→</p>     
+     <p>⑤「U」→</p>
         <p>© 2020 CoderDojo Handa,Created by Yoshinori Takebayashi</p>
          <p>※このサイトの事例はFBの「プログラミングで学ぶ」教材研究グループにて発表された事例を厳選、改良し、再構築してまとめたものです。</p> 
        <!-- <p>NEWS!2019/11/16(土)熊本大学教職大学院情報研修会11月例会にてビスケットの活用編講座を担当させていただきます。</p>-->
