--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                        <div class="lesson-icon">
                        <a href="https://tkby.github.io/micra.github.io/kokugo_micra.html" target="_blank"><img src="https://tkby.github.io/Learning-by-Viscuit.github.io/kokugo.img/kokugo_icon.jpg" alt="国語"></a>
                        </div>
-                       <div><a href="https://tkby.github.io/Learning-by-Viscuit.github.io/kokugo/kokugo.html" target="_blank"><p>国語</p></a></div>
+                       <div><a href="https://tkby.github.io/micra.github.io/kokugo_micra.html" target="_blank"><p>国語</p></a></div>
                   </div>
               
                   <div class="lesson">
