--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <div class="lesson">
                        <!--国語-->
                        <div class="lesson-icon">
-                       <a href="https://tkby.github.io/micra.github.io/kokugo_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/micra.icon/kokugo_micra.jpg" alt="国語"></a>
+                       <a href="https://tkby.github.io/micra.github.io/kokugo_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/kokugo_micra.jpg" alt="国語"></a>
                        </div>
                        <div><a href="https://tkby.github.io/micra.github.io/kokugo_micra.html" target="_blank"><p>国語</p></a></div>
                   </div>
@@ -73,7 +73,7 @@
                   <div class="lesson">
                       <!--算数-->
                       <div class="lesson-icon">
-                      <a href="https://tkby.github.io/micra.github.io/sansu_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/micra.icon/sansu_micra.jpg" alt="算数"></a>
+                      <a href="https://tkby.github.io/micra.github.io/sansu_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/sansu_micra.jpg" alt="算数"></a>
                       </div>
                       <div><a href="https://tkby.github.io/micra.github.io/sansu_micra.html" target="_blank"><p>算数</p></a></div>
                  </div>
@@ -81,7 +81,7 @@
                <div class="lesson">
                       <!--理科-->
                       <div class="lesson-icon">
-                      <a href="https://tkby.github.io/micra.github.io/rika_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/micra.icon/rika_micra.jpg" alt="理科"></a>
+                      <a href="https://tkby.github.io/micra.github.io/rika_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/rika_micra.jpg" alt="理科"></a>
                       </div>   
                       <div><a href="https://tkby.github.io/micra.github.io/rika_micra.html" target="_blank"><p>理科</p></a></div>
                </div>
@@ -89,7 +89,7 @@
                <div class="lesson">
                       <!--社会科-->
                       <div class="lesson-icon">
-                      <a href="https://tkby.github.io/micra.github.io/shakai_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/micra.icon/shakai_micra.jpg" alt="社会科"></a>
+                      <a href="https://tkby.github.io/micra.github.io/shakai_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/shakai_micra.jpg" alt="社会科"></a>
                       </div>
                       <div><a href="https://tkby.github.io/micra.github.io/kokugo_micra.html" target="_blank"><p>社会科 準備中</p></a></div>     
                </div>
@@ -97,7 +97,7 @@
                <div class="lesson">
                       <!--総合-->
                       <div class="lesson-icon">
-                      <a href="https://tkby.github.io/micra.github.io/sogo_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/micra.icon/sogo_micra.jpg" alt="総合的な学習"></a>
+                      <a href="https://tkby.github.io/micra.github.io/sogo_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/sogo_micra.jpg" alt="総合的な学習"></a>
                       </div>
                       <div><a href="https://tkby.github.io/micra.github.io/sogo_micra.html.html" target="_blank" style="word-break: keep-all;"><p>総合的な学習の 時間</p></a></div>
                </div>
@@ -106,7 +106,7 @@
                <div class="lesson">
                       <!--外国語-->
                       <div class="lesson-icon">
-                      <a href="https://tkby.github.io/micra.github.io/gaikokugo_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/micra.icon/gaikokugo_micra.jpg" alt="外国語"></a>
+                      <a href="https://tkby.github.io/micra.github.io/gaikokugo_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/gaikokugo_micra.jpg" alt="外国語"></a>
                       </div>
                       <div><a href="https://tkby.github.io/micra.github.io/gaikokugo_micra.html" target="_blank"><p>外国語 準備中</p></a></div>            
                </div>
@@ -118,7 +118,7 @@
                <div class="lesson">
                       <!--音楽-->
                       <div class="lesson-icon">
-                      <a href="https://tkby.github.io/micra.github.io/ongaku_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/micra.icon/ongaku_micra.jpg" alt="音楽"></a>
+                      <a href="https://tkby.github.io/micra.github.io/ongaku_micra.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/ongaku_micra.jpg" alt="音楽"></a>
                       </div>
                       <div><a href="https://tkby.github.io/micra.github.io/ongaku_micra.html" target="_blank"><p>音楽　準備中</p></a></div>
                </div>
@@ -127,7 +127,7 @@
                <div class="lesson">
                       <!--CS-->
                       <div class="lesson-icon">
-                      <a href="https://tkby.github.io/micra.github.io/CS_micra.html"><img src="https://tkby.github.io/micra.github.io/micra.icon/CS_micra.jpg" alt="CS"></a>
+                      <a href="https://tkby.github.io/micra.github.io/CS_micra.html"><img src="https://tkby.github.io/micra.github.io/CS_micra.jpg" alt="CS"></a>
                       </div>
                       <div><a href="https://tkby.github.io/micra.github.io/CS_micra.html" target="_blank" style="word-break: keep-all;"><p>コンピュータサイエンス</p></a></div>
                </div>
