--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
    </div>
 </div>
   <!--各教科入口-->
- <div class="lesson-wrapper">
+   <!--前の流れはここから-->
+<div class="lesson-wrapper">
      <div class= "container">
            <div class= "heading">         
               <h2>各教科事例入口</h2>
@@ -129,7 +130,7 @@
                       <div class="lesson-icon">
                       <a href="https://tkby.github.io/micra.github.io/CS_micra.html"><img src="https://tkby.github.io/micra.github.io/CS_micra.jpg" alt="CS"></a>
                       </div>
-                      <div><a href="https://tkby.github.io/micra.github.io/CS_micra.html" target="_blank" style="word-break: keep-all;"><p>コンピュータサイエンス</p></a></div>
+                      <div><a href="https://tkby.github.io/micra.github.io/CS_micra.html" target="_blank" style="word-break: keep-all;"><p>コンピュータサイエンス</p></a></div> 
                </div>
        </div><!-- ←div class="lessons"の閉じdiv -->
   </div><!--  ←div class="container"の閉じdiv -->
@@ -146,7 +147,7 @@
                           <p>※必須項目は必ずご入力ください</p>
                           <input class="contact-submit" type="submit" value="送信">
                        </div>
-                  </div>-->
+                  </div>--> 
     <footer>
           <div class="container">
                           <!-- <h1 class="footer-logo"></h1>-->
