--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
     </header>
  <div class="top-wrapper">
     <div class ="container">
-      <h1>小学校の授業でMinecraftを活用する事例サイト</h1>
+      <h1>小学校の授業でのICT活用事例サイト</h1>
+      <h1>〜Minecraftの場合〜</h1>
        
-   　　　 <h2>各教科で実際に実施済のアイデアを掲載</h2>
- 　　　　　　<h3>ICT活用にマイクラに加えることで、児童の学びのバリエーションが増えます！</h3>
+   　　　 <h2>各教科の授業で実施できるアイデアを掲載</h2>
+ 　　　　　　<h3>ICT活用にマイクラを加えることで、児童の学びのバリエーションが増えます！</h3>
        
            <p>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</p>
           <div class="btn-wrapper">
