--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
  <div class="top-wrapper">
     <div class ="container">
       <h1>小学校の授業でのICT活用事例サイト</h1>
-      <h1>〜Minecraftの場合〜</h1>
+      <h1>〜Minecraft(iPad:統合版）の場合〜</h1>
        
-   　　　 <h2>各教科の授業で実施できるアイデアを掲載</h2>
+   　　　 <h2>iPadのマイクラ（統合版）を活用し、各教科の授業で実施できるアイデアを掲載</h2>
  　　　　　　<h3>ICT活用にマイクラを加えることで、児童の学びのバリエーションが増えます！</h3>
        
            <p>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</p>
