--- a/kokugo_micra.html
+++ b/kokugo_micra.html
@@ -73,7 +73,7 @@ img{
         </li>
 
     <li>
-            <div><img src="https://tkby.github.io/　.jpg" alt="マイクラで漢字かくれんぼ"></div>
+            <div><img src="https://tkby.github.io/micra.github.io/漢字かくれんぼ01.jpg" alt="マイクラで漢字かくれんぼ"></div>
         
       <h1>漢字かくれんぼ</h1>
        
