--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <div class="lesson-icon">
                       <a href="https://tkby.github.io/micra.github.io/micra_sogo.html" target="_blank"><img src="https://tkby.github.io/micra.github.io/sogo_micra.jpg" alt="総合的な学習"></a>
                       </div>
-                      <div><a href="https://tkby.github.io/micra.github.io/micra_sogo.html.html" target="_blank" style="word-break: keep-all;"><p>総合的な学習の　時間</p></a></div>
+                      <div><a href="https://tkby.github.io/micra.github.io/micra_sogo.html" target="_blank" style="word-break: keep-all;"><p>総合的な学習の　時間</p></a></div>
                 </div>
                 
                
