--- a/kokugo_micra.html
+++ b/kokugo_micra.html
@@ -87,6 +87,7 @@ img{
       <p>①隠すチームと探すチームに分かれ、全部探し終えるまでのタイムで競う</p>
           <p>②隠したい漢字をノートなどに普通通り書いておく</p>
       <p>③ワールドの座標で漢字を隠す範囲を決めて確認する</p>
+      <div><img src="https://tkby.github.io/micra.github.io/漢字かくれんぼ03.jpg" alt="漢字かくれんぼ範囲"></div>
       <p>④決めたワールドの範囲を板書しておく（余裕があれば、実際に範囲を画面に移して確認する）</p>
           <p>⑤それぞれが設定したワールドの範囲内の好きな場所で漢字を作る（作っているときはお互いの場所に行かないようにする）</p>
       　　  <p>⑦チームの人に見てもらい、正確に漢字を表現できていたら準備完了（隠した場所の座標をメモしておく）</p>
