--- a/kokugo_micra.html
+++ b/kokugo_micra.html
@@ -90,6 +90,8 @@ img{
       <div><img src="https://tkby.github.io/micra.github.io/漢字かくれんぼ03.jpg" alt="漢字かくれんぼ範囲"></div>
       <p>④決めたワールドの範囲を板書しておく（余裕があれば、実際に範囲を画面に移して確認する）</p>
           <p>⑤それぞれが設定したワールドの範囲内の好きな場所で漢字を作る（作っているときはお互いの場所に行かないようにする）</p>
+       <div><img src="https://tkby.github.io/micra.github.io/漢字かくれんぼ04.jpg" alt="漢字かくれんぼ範囲"></div>
+    
       　　  <p>⑦チームの人に見てもらい、正確に漢字を表現できていたら準備完了（隠した場所の座標をメモしておく）</p>
       <p>⑥全ての児童が漢字を準備できたら「漢字かくれんぼ」のスタート（準備の時間には差があるので、待っている児童は他のワールドで遊んで待つなどの工夫をする）</p>
       
