--- a/micra_sansu.html
+++ b/micra_sansu.html
@@ -66,7 +66,9 @@ img{
           <p>方法</p>
           <p>①1マスを1mmに見立て、1cmをノートに表現する</p>
           <p>②ブロックを10個横に並べる（ダイヤモンドブロック等、枠がはっきりしているものを使う）</p>
+          <p>「1mmが10こで1cm」のように看板で表記してまとめる</p>
           <p>③ペアの人に見てもらい、正確に10個並べて1cmを表現できていたら完成(1ブロックの単位を変えると学年が上がっても取り組める）</p>
+          
           
          <p>実際の1mmはとても短く、1cmの中に10個1mmが集まっているのを視覚的に捉えるのは、低学年児童にとってなかなか難しいものです。定規の1mmが10個集まると1cmになることの理解が難しい児童に、小人になったつもりで楽しみながら1mmを10個並べて1cmを捉えてもらう方法です。</p>
     <!--     <button type="button" onclick="location.href ='https://　　　　　　'">詳しく見る</button>-->
