--- a/micra_sansu.html
+++ b/micra_sansu.html
@@ -86,11 +86,11 @@ img{
     <li>
             <div><img src="https://tkby.github.io/micra.github.io　.jpg" alt="マイクラで漢字かくれんぼ"></div>
         
-      <h1>漢字かくれんぼ</h1>
+      <h1>1Lマスを作ろう</h1>
        
            <h2>表現例</h2>
           <p>学年:全学年〜</p>
-          <p>人数：3〜10人（グループ活動）</p>
+          <p>人数：3〜10人（グループ活動）※同一Wi-Fiであればコマンド欄に「/setmaxplayers 25」と入力することで25人までマルチプレイができます</p>
           <p>ワールド：無限</p>
           <p>設定：クリエイティブ/ピース/TNTオフ/座標を表示オン/火の延焼オフ/あとはお好みで設定してください。</p>
           <p>準備物：隠したい漢字をノートに準備させておく</p>
