--- a/kokugo_micra.html
+++ b/kokugo_micra.html
@@ -73,7 +73,7 @@ img{
          
           <p>③ペアの人に見てもらい、正確に漢字を表現できていたら完成</p>
           
-         <p>漢字をドットで表現する活動は、漢字の機会的な練習が苦手な児童のアイデアから生まれました。漢字の構成や形を正しく捉えるためには、漢字に興味を持つことが大切です。ここで紹介する「漢字をドットで表現する」活動は、書き順や「とめ、はね、はらい」などの細かいところをひとまず置いておき、ドットで表現することを通して漢字の形を正しく捉えることに重きを置きます。</p>
+         <p>漢字をドットで表現する活動は、漢字の機会的な練習が苦手な児童のアイデアから生まれました。漢字の構成や形を正しく捉えるためには、漢字に興味を持つことが大切です。ここで紹介する「漢字をドットで表現する」活動は、書き順や「とめ、はね、はらい」などの細かいところをひとまず置いておき、ドットで表現することを通して漢字の形を正しく捉え、漢字に親しむことに重きを置きます。</p>
       <!--   <button type="button" onclick="location.href ='https://　　　　　　'">詳しく見る</button>-->
         </li>
 
