--- a/micra_sansu.html
+++ b/micra_sansu.html
@@ -110,7 +110,7 @@ img{
       　　  <div><img src="https://tkby.github.io/micra.github.io/1dLマス04.jpg" alt="マイクラで1dL04"></div>
 
         
-          <p>この活動は、漢字をドットで表現する活動に慣れた頃に行うと良い活動です。活動は３人以上のマルチプレイが良いでしょう。</p>
+          <p>この活動は、小２算数で習う「水のかさ」の学習内容です。LやdLの単位換算は学年が上がっても身に付いていないこと場合がありますので、復習をとしても幅広い学年で取り組むことができます。</p>
       <!--    <button type="button" onclick="location.href ='https://tkby.github.io/　'">詳しく見る</button>-->
         </li>
        
