--- a/micra_sansu.html
+++ b/micra_sansu.html
@@ -127,7 +127,7 @@ img{
   </ul>
 <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/micra.github.ioindex.html'">トップページ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/index.html'">トップページ</button>
 </nav>
   <small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
 
