--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -67,7 +67,7 @@ img{
           <p>①キャラクターを「〇〇（キャラクター名）ドット」で検索し、カメラロールに保存する</p>
           <p>②複数の児童で１つのキャラクターに取り組む場合は、ドットを分割したものを画像または紙面で提示する</p>
            <div><img src="https://tkby.github.io/micra.github.io/mcr.mario2jpg.jpg" alt="マイクラでマリオを表現1"></div>
-         <div><img src="https://tkby.github.io/micra.github.io/mcr.mario3.mario.jpg" alt="マイクラでマリオを表現2"></div>
+         <div><img src="https://tkby.github.io/micra.github.io/mcr.mario3.jpg" alt="マイクラでマリオを表現2"></div>
          <div><img src="https://tkby.github.io/micra.github.io/mcr.mario4.jpg" alt="マイクラでマリオを表現3"></div>
         <div><img src="https://tkby.github.io/micra.github.io/mcr.mario5.jpg" alt="マイクラでマリオを表現4"></div>
         
