--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -98,7 +98,10 @@ img{
 
       <p>CoderDojoとして地域の小学生の希望者を募って参加</p>
       <div><img src="https://tkby.github.io/micra.github.io/マイクラカップ会場17.jpg" alt="マイクラカップ"></div>
-        
+         <video controls autoplay width=85%>
+            <source src="https://tkby.github.io/micra.github.io/video/hentotsukuridemo.MP4">
+              <p>動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
+            </video>
       <p>2020:「未来の学校　一人一人が可能性に挑戦できる場所」（個人）</p>
        <div><img src="https://tkby.github.io/micra.github.io/マイクラカップ41.jpg" alt="マイクラカップ"></div>
 <div><img src="https://tkby.github.io/micra.github.io/マイクラカップ44.jpg" alt="マイクラカップ"></div>
