--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -85,7 +85,7 @@ img{
         </li>
 
     <li>
-            <div><img src="https://tkby.github.io/micra.github.io/CoderDojoHanda.jpg" alt="マイクラで漢字かくれんぼ"></div>
+            <div><img src="https://tkby.github.io/micra.github.io/CoderDojoHanda.jpg" alt="マイクラカップ"></div>
         
       <h1>Minecraft Education Editionでマインクラフトカップに参戦</h1>
       <h2>2019年度からマインクラフトカップという全国大会が開かれています。学校のクラスやクラブ活動などでの参戦も可能です。</h1>
@@ -99,7 +99,7 @@ img{
       <p>CoderDojoとして地域の小学生の希望者を募って参加</p>
       <div><img src="https://tkby.github.io/micra.github.io/マイクラカップ会場17.jpg" alt="マイクラカップ"></div>
          <video controls autoplay width=85%>
-            <source src="https://tkby.github.io/micra.github.io/video/hentotsukuridemo.MP4">
+            <source src="https://tkby.github.io/micra.github.io/マイクラカップ2019.mp">
               <p>動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
             </video>
       <p>2020:「未来の学校　一人一人が可能性に挑戦できる場所」（個人）</p>
