--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -47,7 +47,7 @@ img{
 
 <body>
 
-    <h1>総合的な学習の時間</h1>
+    <h1>総合的な学習の時間・その他</h1>
     <p>総合的な学習の時間で使える事例を紹介いたします。</p>
   <ul class="box-list">
        
