--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -85,7 +85,7 @@ img{
         </li>
 
     <li>
-            <div><img src="https://tkby.github.io/micra.github.io/CoderDojoHanda.jpg" alt="マイクラカップ"></div>
+            <div><img src="https://tkby.github.io/micra.github.io/CodeDojoHanda.jpg" alt="マイクラカップ"></div>
         
       <h1>Minecraft Education Editionでマインクラフトカップに参戦</h1>
       <h2>2019年度からマインクラフトカップという全国大会が開かれています。学校のクラスやクラブ活動などでの参戦も可能です。</h1>
