--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -113,6 +113,7 @@ img{
           <p>準備物：Minecraft Education Editionを使用するための諸手続き、大会エントリーの諸手続き</p>
          <p></p>
           <p>準備物：Minecraft Education </p>
+      <p>その他詳細は準備中です。</p>
       
       <!--    <button type="button" onclick="location.href ='https://tkby.github.io/　'">詳しく見る</button>-->
         </li>
