--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -91,7 +91,7 @@ img{
       <h2>2019年度からマインクラフトカップという全国大会が開かれています。学校のクラスやクラブ活動などでの参戦も可能です。</h1>
       <a href="https://minecraftcup.com">マインクラフトカップ・トップへ</a>   
       <h2>大会テーマ</h2>
-      <p>2019:「スポーツ施設のある僕・私の街」(3名以上30人以内のチーム）</p>
+      <h2>2019:「スポーツ施設のある僕・私の街」(3名以上30人以内のチーム）</h2>
        <div><img src="https://tkby.github.io/micra.github.io/マイクラカップ30.jpg" alt="マイクラカップ"></div>
       <p>総合的な学習の時間：学級（クラブ活動の児童も参加）</p>
     
@@ -102,11 +102,11 @@ img{
             <source src="https://tkby.github.io/micra.github.io/マイクラカップ2019.mp4">
               <p>動画を再生するには、videoタグをサポートしたブラウザが必要です。</p>
             </video>
-      <p>2020:「未来の学校　一人一人が可能性に挑戦できる場所」（個人）</p>
+      <h2>2020:「未来の学校　一人一人が可能性に挑戦できる場所」（個人）</h2>
        <div><img src="https://tkby.github.io/micra.github.io/マイクラカップ41.jpg" alt="マイクラカップ"></div>
 <div><img src="https://tkby.github.io/micra.github.io/マインクラフト44.jpg" alt="マイクラカップ"></div>
 
-      <p>2021:「SDGs時代のみんなの家、未来のまち」(1人から30人以内のチーム）</p>
+      <h2>2021:「SDGs時代のみんなの家、未来のまち」(1人から30人以内のチーム）</h2>
          
       <p>ワールド：フラットまたは無限</p>
           <p>設定：お好みで設定してください。</p>
