--- a/micra_sogo.html
+++ b/micra_sogo.html
@@ -82,7 +82,9 @@ img{
         
          <p>キャラクターをドットで表現する活動は、ゲーム好きな児童にとって興味・関心が高い活動です。慣れ親しんでいるキャラクターがドットで表現されていることを知ることは、コンピュータサイエンスの入門編として情報活用能力の育成にもつながることでしょう。</p>
        <!--  <button type="button" onclick="location.href ='https://　　　　　　'">詳しく見る</button>-->
-        </li>
+          <p>※本記事中のキャラクターは、以下のガイドラインに従っています</p>
+   <a href="https://www.nintendo.co.jp/networkservice_guideline/ja/index.html">ネットワークサービスにおける任天堂の著作物利用に関するガイドライン</a>
+          </li>
 
     <li>
             <div><img src="https://tkby.github.io/micra.github.io/CodeDojoHanda.jpg" alt="マイクラカップ"></div>
