--- a/index.html
+++ b/index.html
@@ -109,8 +109,12 @@
        <footer>
         <div class="container">
           <ul class="footer-list">
+            <li><p>本サイトは、以下のMinecraft公式の著作権関連規約に従います</p>/li>
+            <li><a href="https://account.mojang.com/documents/commercial_guidelines">Minecraft 商用利用ガイドライン</a><li>
+             <li><a href="https://account.mojang.com/documents/minecraft_eula">MINECRAFT エンド ユーザー ライセンス条項</a><li> 
              <li><a href="https://tkby.github.io/Learning-by-Viscuit.github.io/">姉妹サイト Viscuitの授業事例サイト</a><li>
              <li>©2021 CoderDojo Handa,Created by Yoshinori Takebayashi</li>
+           
           </ul>     
         </div>
        </footer>                 
