--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <ul class="footer-list">
             <li><a href="https://account.mojang.com/documents/commercial_guidelines">Minecraft 商用利用ガイドライン</a><li>
              <li><a href="https://account.mojang.com/documents/minecraft_eula">MINECRAFT エンド ユーザー ライセンス条項</a><li>
-              <li><p>本サイトは、上記のMinecraft公式の著作権関連規約に従います</p>/li>
+              <li><p>本サイトは、上記のMinecraft公式の著作権関連規約に従います</p></li>
           
              <li><a href="https://tkby.github.io/Learning-by-Viscuit.github.io/">姉妹サイト Viscuitの授業事例サイトもご利用ください</a><li>
              <li>©2021 CoderDojo Handa,Created by Yoshinori Takebayashi</li>
