--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics グーグルアナリティクスのページIDを取得してコピペ-->
-  <script async src="https://　　　　　　"></script>
-    <script>
-     window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', '　　　　');
-    </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J70C750LN5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-J70C750LN5');
+</script>
  
     <meta charset="utf-8">
  　　<!--レスポンシブのためのviewport-->
