--- a/Shotengai.html
+++ b/Shotengai.html
@@ -76,7 +76,7 @@ img{
                   <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
          
               <h3>方法</h3>
-                 <div><img src="https://tkby.github.io/micra.github.io/tankyu.jpg" alt="探究的な学習における学び"></div>
+                 <div><img src="https://tkby.github.io/micra.github.io/tankyu.jpg.jpg" alt="探究的な学習における学び"></div>
          
                   <p>①作りたい町を調べる</p>
                   <p>②担当する建物を割り振りする</p>
