--- a/Shotengai.html
+++ b/Shotengai.html
@@ -52,7 +52,7 @@ img{
   
   <ul class="box-list"> 
         <li>
-          <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1" alt=""></div>
+          <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt=""></div>
          
           <h1>町づくり</h1>
          
