--- a/Shotengai.html
+++ b/Shotengai.html
@@ -77,7 +77,7 @@ img{
          
               <h3>方法</h3>
                  <div><img src="https://tkby.github.io/micra.github.io/tankyu.jpg.jpg" alt="探究的な学習における学び"></div>
-         
+                   <p>図1(「小学校学習指導要(平成29年告示)領解説【総合的な学習の時間編】第２節1(1)探究的な見方・考え方を働かせる(9p)より引用)</p>
                   <p>①作りたい町を調べる</p>
                   <p>②担当する建物を割り振りする</p>
                 <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
