--- a/Shotengai.html
+++ b/Shotengai.html
@@ -77,7 +77,7 @@ img{
          
               <h3>方法</h3>
                  <div><img src="https://tkby.github.io/micra.github.io/tankyu.jpg.jpg" alt="探究的な学習における学び"></div>
-                   <p>図1「小学校学習指導要領(H29告示)解説9pより引用</p>
+                   <p>図1「小学校学習指導要領(H29告示)解説」9pより引用</p>
                   <p>①作りたい町を調べる</p>
                   <p>②担当する建物を割り振りする</p>
                 <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
