--- a/Shotengai.html
+++ b/Shotengai.html
@@ -51,12 +51,15 @@ img{
         <ul class="box-list"> 
         <li>
           <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt=""></div>
-           <h2>活動の概要</h2>
-          <p></p>
-         
+         <h2>学習活動名</h2>  
+             <p>地域の祭りをデジタルで表現しよう</p>
+         <h3>学年</h3>
+             <p>小学校中学年以上～高校生</p>
+         <h3>目標</h3>
+          　 <p></p>
+          <h3>環境</h3>
             <h2>展開例</h2>
-              <h3>学年</h3>
-                  <p>小学校中学年以上～高校生</p>
+             
               <h3>人数パターン</h3>
                   <p>①2人以上～5人以下のグループ活動(コマンドを使用しない同一WiFi下の場合)</p>
                   <p>②25人まで(コマンド「/setmaxplayers 25」を使用した同一WiFi下の場合)</p>
