--- a/Shotengai.html
+++ b/Shotengai.html
@@ -52,11 +52,12 @@ img{
         <li>
           <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt=""></div>
          <h2>学習活動名</h2>  
-             <p>地域の祭りをデジタルで表現しよう</p>
+             <p>地域の祭り「うすき竹宵」をデジタルで表現しよう</p>
          <h3>学年</h3>
-             <p>小学校中学年以上～高校生</p>
+             <p>小学校高学年</p>
          <h3>目標</h3>
-          　 <p></p>
+          　 <p>地域の商店街にはどんな店があるか調べ，いろんな人の考えを参考にしながら協力して商店街を完成させ，地域の祭り「うすき竹宵」を表現する。</p>
+          　 
           <h3>環境</h3>
             <h2>展開例</h2>
              
