--- a/Shotengai.html
+++ b/Shotengai.html
@@ -56,13 +56,11 @@ img{
          <h3>学年</h3>
              <p>小学校高学年</p>
          <h3>目標</h3>
-          　 <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>
-         <h3>マインクラフトのバージョン</h3>
-             <p>マインクラフト統合版ver17以降</p>
+          　 <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>             
          <h3>環境</h3>
-             <p>教員用:Windows PC
-             <p>児童用:マイクラ作業用iPad（ペアに1台～1人1台），情報収集用iPad1台</p>
-         
+             <p>教員用:Windows PC ＋ Windows版　Minecraft
+             <p>児童用:マルチプレイ制作用iPad（ペアに1台～1人1台）＋　iOS版Mincraft，情報収集用iPad1台（ペアに1台～1人1台）</p>
+          <p>回線:マルチプレイ制作用iPadのみモバイルルーター（Wimax回線ホームルーターL01）を使用</p>
          <h3>活動形態</h3>
           <p>ペア活動（
           
