--- a/Shotengai.html
+++ b/Shotengai.html
@@ -56,13 +56,16 @@ img{
          <h3>学年</h3>
              <p>小学校高学年</p>
          <h3>目標</h3>
-            <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>             
+          <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>          
          <h3>環境</h3>
-             <p>教員用:Windows PC ＋ Windows版　Minecraft
-             <p>児童用:マルチプレイ制作用iPad（ペアに1台～1人1台）＋　iOS版Mincraft，情報収集用iPad1台（ペアに1台～1人1台）</p>
-          <p>回線:マルチプレイ制作用iPadのみモバイルルーター（Wimax回線ホームルーターL01）を使用</p>
-         <h3>活動形態</h3>
-          <p>ペア活動（
+            <h4>教員用</h4>
+              <p>Windows PC ＋ Windows版　Minecraft</p>
+            <h4>児童用</h4>
+              <p>マルチプレイ制作用iPad（ペアに1台～1人1台）＋　iOS版Mincraft</p>
+              <p>情報収集用iPad1台（ペアに1台～1人1台）</p>
+            <h4>回線</h4>
+              <p>マルチプレイ制作用iPadのみモバイルルーター（Wimax回線ホームルーターL01）を使用</p>
+         
           
             <h2>展開例</h2> 
               <h3>人数パターン</h3>
