--- a/Shotengai.html
+++ b/Shotengai.html
@@ -58,21 +58,16 @@ img{
          <h3>目標</h3>
           <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>          
          <h3>環境</h3>
-            <h4>教員用</h4>
+            <h4>教員用（ホスト機）</h4>
               <p>Windows PC ＋ Windows版　Minecraft</p>
+               <p>※「/setmaxplayers 25」を入力してマルチプレイ</p>
             <h4>児童用</h4>
               <p>マルチプレイ制作用iPad（ペアに1台～1人1台）＋　iOS版Mincraft</p>
               <p>情報収集用iPad1台（ペアに1台～1人1台）</p>
             <h4>回線</h4>
               <p>マルチプレイ制作用iPadのみモバイルルーター（Wimax回線ホームルーターL01）を使用</p>
-         
+          <h3>学習活動の概要</h3>
           
-            <h2>展開例</h2> 
-              <h3>人数パターン</h3>
-                  <p>①2人以上～5人以下のグループ活動(コマンドを使用しない同一WiFi下の場合)</p>
-                  <p>②25人まで(コマンド「/setmaxplayers 25」を使用した同一WiFi下の場合)</p>
-                  <p>③25人以上(外部サーバーを使用する場合)</p>
-                  <p>※本コーナーでは，人数パターン②のみ紹介いたします。</p>
               <h3>準備物</h3>
                   <p>マイクラ作業用iPad,情報検索用iPad,町のマップ・パンフレット等</p>
               <h3>ワールドパターン</h3>
