--- a/Shotengai.html
+++ b/Shotengai.html
@@ -52,22 +52,26 @@ img{
         <li>
           <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt=""></div>
          <h2>学習活動名</h2>  
-             <p>地域の祭りと商店街をデジタルで表現しよう</p>
-         <h3>学年</h3>
+             <p>総合的な学習の時間「地域の祭りと商店街をデジタルで表現しよう」</p>
+         <h4>学年</h4>
              <p>小学校高学年</p>
-         <h3>目標</h3>
+         <h2>目標</h2>
           <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>          
-         <h3>環境</h3>
+         <h2>環境</h2>
             <h4>教員用（ホスト機）</h4>
               <p>Windows PC ＋ Windows版　Minecraft</p>
                <p>※「/setmaxplayers 25」を入力してマルチプレイ</p>
+          　　 <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
+               <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
             <h4>児童用</h4>
               <p>マルチプレイ制作用iPad（ペアに1台～1人1台）＋　iOS版Mincraft</p>
               <p>情報収集用iPad1台（ペアに1台～1人1台）</p>
             <h4>回線</h4>
               <p>マルチプレイ制作用iPadのみモバイルルーター（Wimax回線ホームルーターL01）を使用</p>
-          <h3>学習活動の概要</h3>
-          
+          <h2>学習活動の概要</h2>
+            <h4>教科</h4>
+               <p>総合的な学習の時間（第5,6学年）</p>
+            <h4>5月</h4>
               <h3>準備物</h3>
                   <p>マイクラ作業用iPad,情報検索用iPad,町のマップ・パンフレット等</p>
               <h3>ワールドパターン</h3>
