--- a/Shotengai.html
+++ b/Shotengai.html
@@ -61,8 +61,9 @@ img{
             <h4>教員用（ホスト機）</h4>
               <p>Windows PC ＋ Windows版　Minecraft</p>
                <p>※「/setmaxplayers 25」を入力してマルチプレイ</p>
-          　　 <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
+          　　     <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
                <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
+                   <div><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt=""></div>
             <h4>児童用</h4>
               <p>マルチプレイ制作用iPad（ペアに1台～1人1台）＋　iOS版Mincraft</p>
               <p>情報収集用iPad1台（ペアに1台～1人1台）</p>
