--- a/kokugo_micra.html
+++ b/kokugo_micra.html
@@ -84,7 +84,7 @@ img{
        
            <h2>表現例</h2>
           <p>学年:全学年〜</p>
-           <p>人数：3〜10人（グループ活動）※同一Wi-Fiであればコマンド欄に「/setmaxplayers 25」と入力することで25人までマルチプレイができます</p>
+           <p>人数：3〜10人（グループ活動）※同一Wi-Fiであればコマンド欄に「/setmaxplayers 数字」と入力することで数字の人数（１以上40以下）までマルチプレイができます</p>
         
           <p>ワールド：無限</p>
           <p>設定：クリエイティブ/ピース/TNTオフ/座標を表示オン/火の延焼オフ/あとはお好みで設定してください。</p>
