--- a/Shotengai.html
+++ b/Shotengai.html
@@ -60,7 +60,7 @@ img{
          <h2>環境</h2>
             <h4>教員用（ホスト機）</h4>
               <p>Windows PC ＋ Windows版　Minecraft</p>
-               <p>※「/setmaxplayers 25」を入力してマルチプレイ</p>
+               <p>※コマンドで「/setmaxplayers 数字」と入力して数字の人数（1以上40以下)のマルチプレイを設定する。</p>
           　　     <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
                <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
                    <div><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt=""></div>
