--- a/Shotengai.html
+++ b/Shotengai.html
@@ -50,7 +50,8 @@ img{
     <h1>マインクラフトで探究的な学習</h1>
         <ul class="box-list"> 
         <li>
-          <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt=""></div>
+          <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt="マイクラ完成図上空"></div>
+           <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei2.jpg" alt="マイクラ完成図路上"></div>
          <h2>学習活動名</h2>  
              <p>総合的な学習の時間「地域の祭りと商店街をデジタルで表現しよう」</p>
          <h4>学年</h4>
@@ -59,9 +60,11 @@ img{
           <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>          
          <h2>環境</h2>
             <h4>教員用（ホスト機）</h4>
-              <p>Windows PC ＋ Windows版　Minecraft</p>
-               <p>※コマンドで「/setmaxplayers 数字」と入力して数字の人数（1以上40以下)のマルチプレイを設定する。</p>
-          　　     <div><img src="https://tkby.github.io/micra.github.io/" alt=""></div>
+                <p>Windows PC ＋ Windows版　Minecraft</p>
+                <p>※コマンドで「/setmaxplayers 数字」と入力する。</p>
+          　　     <div><img src="https://tkby.github.io/micra.github.io/players25" alt="プレイヤー25人のコマンド"></div>
+                <p> 数字の人数（1以上40以下)のマルチプレイが設定される。</p>
+                  <div><img src="https://tkby.github.io/micra.github.io/players25set" alt="プレイヤー25人のセット完了"></div>
                <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
                    <div><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt=""></div>
             <h4>児童用</h4>
