--- a/Shotengai.html
+++ b/Shotengai.html
@@ -62,9 +62,9 @@ img{
             <h4>教員用（ホスト機）</h4>
                 <p>Windows PC ＋ Windows版　Minecraft</p>
                 <p>※コマンドで「/setmaxplayers 数字」と入力する。</p>
-          　　     <div><img src="https://tkby.github.io/micra.github.io/players25" alt="プレイヤー25人のコマンド"></div>
+          　　     <div><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人のコマンド"></div>
                 <p> 数字の人数（1以上40以下)のマルチプレイが設定される。</p>
-                  <div><img src="https://tkby.github.io/micra.github.io/players25set" alt="プレイヤー25人のセット完了"></div>
+                  <div><img src="https://tkby.github.io/micra.github.io/players25set.jpg" alt="プレイヤー25人のセット完了"></div>
                <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
                    <div><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt=""></div>
             <h4>児童用</h4>
