--- a/Shotengai.html
+++ b/Shotengai.html
@@ -61,7 +61,7 @@ img{
          <h2>環境</h2>
             <h4>教員用（ホスト機）</h4>
                 <p>Windows PC ＋ Windows版　Minecraft</p>
-          　　　 <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
+          　　　 <div><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt="マイクラWin10版"></div>
                 <p>画像はAmazon.co.jpより引用</p>
                 <a href="https://www.amazon.co.jp/%E3%83%9E%E3%82%A4%E3%83%B3%E3%82%AF%E3%83%A9%E3%83%95%E3%83%88-%E3%82%B9%E3%82%BF%E3%83%BC%E3%82%BF%E3%83%BC%E3%82%B3%E3%83%AC%E3%82%AF%E3%82%B7%E3%83%A7%E3%83%B3-Windows-10-%E3%82%AA%E3%83%B3%E3%83%A9%E3%82%A4%E3%83%B3%E3%82%B3%E3%83%BC%E3%83%89%E7%89%88/dp/B07L51QCKP">アマゾンサイトへ</a>
                  <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
