--- a/Shotengai.html
+++ b/Shotengai.html
@@ -61,6 +61,7 @@ img{
          <h2>環境</h2>
             <h4>教員用（ホスト機）</h4>
                 <p>Windows PC ＋ Windows版　Minecraft</p>
+             <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
           　　         <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
                    <div><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt=""></div>
                  <p>※コマンドで「/setmaxplayers 数字」と入力する。</p>
