--- a/Shotengai.html
+++ b/Shotengai.html
@@ -62,7 +62,7 @@ img{
             <h4>教員用（ホスト機）</h4>
                 <p>Windows PC ＋ Windows版　Minecraft</p>
              <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
-          <p><画像はAmazon.co.jpより引用></p>
+          <p><画像はWindows版Mincraft(Amazon.co.jpより引用)></p>
           　　         <p>※PC画面をHDMIケーブルで大型モニターに提示</p>
                    <div><img src="https://tkby.github.io/micra.github.io/monitor1.jpg" alt=""></div>
                  <p>※コマンドで「/setmaxplayers 数字」と入力する。</p>
