--- a/Shotengai.html
+++ b/Shotengai.html
@@ -48,6 +48,7 @@ img{
 <body>
 
     <h1>マインクラフトで探究的な学習</h1>
+  <p>マインクラフトを活用して，教科横断型の問題解決学習を展開する例です。実際の実施事例をもとにまとめています。</p>
         <ul class="box-list"> 
         <li>
           <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt="マイクラ完成図上空"></div>
