--- a/Shotengai.html
+++ b/Shotengai.html
@@ -48,15 +48,16 @@ img{
 <body>
 
     <h1>マインクラフトで教科横断型問題解決学習</h1>
-  <p>マインクラフトを活用して，教科横断型の問題解決学習を展開する例です。実際の実施事例をもとに,実施する際のポイントをまとめています。</p>
+  <p>マインクラフトを活用して，教科横断型の問題解決学習を展開する事例の紹介です。実際の実施した事例をもとに，ポイントをまとめました。</p>
         <ul class="box-list"> 
         <li>
           <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei1.jpg" alt="マイクラ完成図上空"></div>
            <div><img src="https://tkby.github.io/micra.github.io/shotengai_kansei2.jpg" alt="マイクラ完成図路上"></div>
          <h2>学習活動名</h2>  
                <p>総合的な学習の時間「地域の祭りと商店街をデジタルで表現しよう」</p>
-            <h3>対象学年
+          <h2>対象学年</h2>
                <p>小学校高学年～高校生</p>
+          <h2>使用教材</h2>
             <h3>学習活動の概要</h3>
               <h3>教科</h3>
                <p>総合的な学習の時間（第5,6学年）</p>
