--- a/Shotengai.html
+++ b/Shotengai.html
@@ -58,6 +58,12 @@ img{
           <h2>対象学年</h2>
                <p>小学校高学年～高校生</p>
           <h2>使用教材</h2>
+             <p>Windows PC（ホスト機）</p>
+             <p>Windows版　Minecraft</p>
+             <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
+              <p>iPad</p>　
+              <p>iOSのMinecraft</p>
+              <div><img src="https://tkby.github.io/micra.github.io/.jpg" alt="マイクラWin10版"></div>
             <h3>学習活動の概要</h3>
               <h3>教科</h3>
                <p>総合的な学習の時間（第5,6学年）</p>
@@ -78,8 +84,7 @@ img{
           <p>地域の商店街の店について調べながら1人1店舗制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街で地域の祭りを表現する。</p>          
          <h2>環境</h2>
             <h3>教員用（ホスト機）</h3>
-                  <p>Windows PC ＋ Windows版　Minecraft</p>
-                    <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
+                      
                   <p><画像はWindows版Mincraft(Amazon.co.jpより引用)></p>
             <h3>児童用</h3>
                   <p>マルチプレイ制作用iPad（ペアに1台～1人1台）＋　iOS版Mincraft</p>
