--- a/Shotengai.html
+++ b/Shotengai.html
@@ -63,7 +63,7 @@ img{
              <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
               <p>iPad</p>　
               <p>iOSのMinecraft</p>
-              <div><img src="https://tkby.github.io/micra.github.io/.jpg" alt="マイクラWin10版"></div>
+              <div><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="マイクラ版"></div>
             <h3>学習活動の概要</h3>
               <h3>教科</h3>
                <p>総合的な学習の時間（第5,6学年）</p>
