--- a/Shotengai.html
+++ b/Shotengai.html
@@ -58,12 +58,21 @@ img{
           <h2>対象学年</h2>
                <p>小学校高学年～高校生</p>
           <h2>使用教材</h2>
-             <p>Windows PC（ホスト機）</p>
+          　<h3>ホスト機</h3>
+             <p>Windows PC(Windows10)</p>
+             <h4>Q:ホスト機のスペックはどのくらい必要ですか？<h4>
+               <p>A:具体的にどの位かは分かりません。21名のマルチプレイで町づくりを実施した際にホスト機として使用したPCの機種と主なスペックを上げておきます。</p>
+               <p>機種：VASTKING LAPTOP-K149U ※廉価なパソコンです。</p>
+             <p>プロセッサ:Intel CORE i3</p>
+             <p>メモリ:メモリ8GB</p>
              <p>Windows版　Minecraft</p>
              <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
-              <p>iPad</p>　
-              <p>iOSのMinecraft</p>
+           <h3>児童機（制作用）</h3>
+               <p>iPad Air2（2016)21台</p>　
+               <p>iOSのMinecraft(Ver 17～)</p>
               <div><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="マイクラ版"></div>
+           <h3>児童機（情報収集用）<h3>
+             <p>iPad（GIGA仕様）</p>
             <h3>学習活動の概要</h3>
               <h3>教科</h3>
                <p>総合的な学習の時間（第5,6学年）</p>
