--- a/Shotengai.html
+++ b/Shotengai.html
@@ -60,9 +60,9 @@ img{
           <h2>使用教材</h2>
           　<h3>ホスト機</h3>
              <p>Windows PC(Windows10)</p>
-             <h4>Q:ホスト機のスペックはどのくらい必要ですか？<h4>
-               <p>A:具体的にどの位かは分かりません。21名のマルチプレイで町づくりを実施した際にホスト機として使用したPCの機種と主なスペックを上げておきます。</p>
-               <p>機種：VASTKING LAPTOP-K149U ※廉価なパソコンです。</p>
+             <h4>Q:ホスト機のスペックはどのくらい必要ですか？</h4>
+               <p>A:参考例として，21名のマルチプレイで町づくりを実施した際にホスト機として使用したPCの機種と主なスペックを上げておきます。</p>
+               <p>機種：VASTKING LAPTOP-K149U ※比較的廉価なパソコンです。</p>
              <p>プロセッサ:Intel CORE i3</p>
              <p>メモリ:メモリ8GB</p>
              <p>Windows版　Minecraft</p>
