--- a/Shotengai.html
+++ b/Shotengai.html
@@ -59,14 +59,17 @@ img{
                <p>小学校高学年～高校生</p>
           <h2>使用教材</h2>
           　<h3>ホスト機</h3>
-             <p>Windows PC(Windows10)</p>
+              <p>Windows PC(Windows10)</p>
              <h4>Q:ホスト機のスペックはどのくらい必要ですか？</h4>
                <p>A:参考例として，21名のマルチプレイで町づくりを実施した際にホスト機として使用したPCの機種と主なスペックを上げておきます。</p>
                <p>機種：VASTKING LAPTOP-K149U ※比較的廉価なパソコンです。</p>
-             <p>プロセッサ:Intel CORE i3</p>
-             <p>メモリ:メモリ8GB</p>
-             <p>Windows版　Minecraft</p>
-             <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>
+              <p>プロセッサ:Intel CORE i3</p>
+              <p>メモリ:メモリ8GB</p>
+            <h3>ホスト機にインストールするソフト</h3>
+                <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>      
+                 <p>Windows版　Minecraft ※Java Editionとお間違えのないように!</p> 
+               <h4>Q:ソフトはどこで購入できますか？</h4>
+               <p>A:Amazon.comで購入できます。</p>
            <h3>児童機（制作用）</h3>
                <p>iPad Air2（2016)21台</p>　
                <p>iOSのMinecraft(Ver 17～)</p>
