--- a/Shotengai.html
+++ b/Shotengai.html
@@ -66,24 +66,28 @@ img{
               <p>プロセッサ:Intel CORE i3</p>
               <p>メモリ:メモリ8GB</p>
             <h3>ホスト機にインストールするソフト</h3>
-                <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>      
-                 <p>Windows版　Minecraft ※Java Editionとお間違えのないように!</p> 
-               <h4>Q:ソフトはどこで購入できますか？</h4>
-               <p>A:Amazon.comで購入できます。</p>
-           <h3>児童機（制作用）</h3>
-               <p>iPad Air2（2016)21台</p>　
-               <p>iOSのMinecraft(Ver 17～)</p>
+             　 <p>Windows版　Minecraft ※Java Editionとお間違えのないように!</p> 
+          　　　　 <div><img src="https://tkby.github.io/micra.github.io/winmicra.jpg" alt="マイクラWin10版"></div>  
+           　<h4>Q:ソフトはどこで購入できますか？</h4>
+             　 <p>A:Amazon.comでの購入がお手軽です。</p>
+          　 <h3>児童機（制作用）</h3>
+              　<p>iPad Air2（2015年製)21台</p>
+           <h3>児童機（制作用）にインストールするアプリ</h3>
+             <p>iOSのMinecraft(Ver 17～)</p>
               <div><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="マイクラ版"></div>
+          　<h4>Q:古いiPadでもマインクラフトを使用できますか</h4>
+         　　　 <p>A:実施事例ではiPad Air2(2015年製)のiPadを使用していますが，問題なく作動しました。</p>
            <h3>児童機（情報収集用）<h3>
              <p>iPad（GIGA仕様）</p>
+             　
             <h3>学習活動の概要</h3>
               <h3>教科</h3>
                <p>総合的な学習の時間（第5,6学年）</p>
             <h3>5月</h3>
             <h3>準備物</h3>
                <p>マイクラ作業用iPad,情報検索用iPad,町のマップ・パンフレット等</p>
-              
-         
+            <h4>Q:制作用と情報収集用を1台で賄うことはできませんか？</h4>
+               <p>A:マインクラフトで制作中に，アプリを切り替えて情報収集すると，マルチプレイから離脱してしまうのでお勧めしません。</p>
             <h3>方法</h3>
                  <div><img src="https://tkby.github.io/micra.github.io/tankyu.jpg.jpg" alt="探究的な学習における学び"></div>
                <p>図1「小学校学習指導要領(H29告示)解説」9pより引用</p>
