--- a/Shotengai.html
+++ b/Shotengai.html
@@ -77,7 +77,11 @@ img{
               <div><img src="https://tkby.github.io/micra.github.io/iOSMicra.jpg" alt="マイクラ版"></div>
           　<h4>Q:古いiPadでもマインクラフトを使用できますか</h4>
          　　　 <p>A:実施事例ではiPad Air2(2015年製)のiPadを使用していますが，問題なく作動しました。</p>
-           <h3>児童機（情報収集用）<h3>
+            <h4>Q:制作用と情報収集用を1台で賄うことはできませんか？</h4>
+               <p>A:マインクラフトで制作中に，アプリを切り替えて情報収集すると，マルチプレイから離脱してしまうのでお勧めしません。</p>
+            <h4>Q:Minceraft Education Editionを使うのと，どちらが良いですか？</h4>
+            <p>A:Minceraft Education Editionを使用できる環境があれば，そちらの方がベターです。</p>
+           <h3>児童機（情報収集用）</h3>
              <p>iPad（GIGA仕様）</p>
              　
             <h3>学習活動の概要</h3>
@@ -86,9 +90,7 @@ img{
             <h3>5月</h3>
             <h3>準備物</h3>
                <p>マイクラ作業用iPad,情報検索用iPad,町のマップ・パンフレット等</p>
-            <h4>Q:制作用と情報収集用を1台で賄うことはできませんか？</h4>
-               <p>A:マインクラフトで制作中に，アプリを切り替えて情報収集すると，マルチプレイから離脱してしまうのでお勧めしません。</p>
-            <h3>方法</h3>
+                    <h3>方法</h3>
                  <div><img src="https://tkby.github.io/micra.github.io/tankyu.jpg.jpg" alt="探究的な学習における学び"></div>
                <p>図1「小学校学習指導要領(H29告示)解説」9pより引用</p>
                <p>①作りたい町を調べる</p>
